--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=rd3_lakesia
 DB_USERNAME=root
-DB_PASSWORD=rd3lakesia
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
